# evolutionary-neural-network

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  data.cpp  data.csv  data.hpp  environment.hpp  input.csv  main  main.cpp  network.cpp  network.hpp  output.csv  result.csv  save.csv  world.cpp  world.hpp
